[package]
authors = ["Daniel P. Teberian"]
categories = ["embedded", "no-std"]
description = "The kernel for LibertyOS."
edition = "2018"
license = "Apache-2.0"
keywords = ["no-std", "liberty", "libertyos", "os", "kernel"]
name = "libertyos_kernel"
readme = "README.md"
repository = "https://github.com/LibertyOS-Development/kernel"
version = "0.17.5"

[dependencies]
acpi = "5.1.0"
aml = "0.16.0"
arrayvec = { version = "0.7.2", default-features = false }
bit_field = "0.10.2"
bitflags = "2.6.0"
bootloader = { version = "0.9.29", features = ["map_physical_memory"]}
conquer-once = { version = "0.4.0", default-features = false }
embedded-graphics = "0.8.1"
embedded-time = "0.12.1"
fat32 = "0.2.0"
libm = "0.2"
linked_list_allocator = "0.10.5"
log = "0.4.22"
memoffset = "0.9.1"
num-traits = { version = "0.2.14", default-features = false }
object = { version = "0.36.7", default-features = false, features = ["read"] }
pc-keyboard = "0.5.0"
x86_64 = "0.15.2"
rand = { version = "0.8.4", default-features = false }
rand_core = { version = "0.6.3", default-features = false }
serde = { version = "1.0.217", default-features = false }
spin = "0.9.8"
tinybmp = "0.6.0"
uart_16550 = "0.3.2"
volatile = "0.6.1"
vga = "0.2.9"
vte = "0.13.1"

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
raw-cpuid = "11.2.0"
x86 = { version = "0.52.0", default-features = false }

[dependencies.crossbeam-queue]
version = "0.3.12"
default-features = false
features = ["alloc"]

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
		"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
		"-display", "none"
	    ]
test-success-exit-code = 33
test-timeout = 300






[[test]]
name = "shouldpanic"
harness = false

[[test]]
name = "stackoverflow"
harness = false

